SDLCOM-5327 Tell Me Redirect & Refinement

--- a/SDLDataProtectionSuite/DataProtectionSuiteTests/DataProtectionSuiteTests.csproj
+++ b/SDLDataProtectionSuite/DataProtectionSuiteTests/DataProtectionSuiteTests.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net48</TargetFramework>
 		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<LangVersion>preview</LangVersion>
 	</PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
