--- a/SDLDataProtectionSuite/SDLDataProtectionSuite/Sdl.Community.SdlDataProtectionSuite.csproj
+++ b/SDLDataProtectionSuite/SDLDataProtectionSuite/Sdl.Community.SdlDataProtectionSuite.csproj
@@ -6,7 +6,7 @@
 		<PluginDeploymentPath>$(AppData)\Trados\Trados Studio\17\Plugins</PluginDeploymentPath>
 		<TradosFolder>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17</TradosFolder>
 		<CreatePluginPackage>true</CreatePluginPackage>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>preview</LangVersion>
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
 	</PropertyGroup>
@@ -254,7 +254,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="4.5.0" />
+		<PackageReference Include="Extended.Wpf.Toolkit">
+			<Version>4.5.0</Version>
+		</PackageReference>
     <PackageReference Include="RwsAppStore.UsefulTips.Service" Version="4.0.1" />
     <PackageReference Include="Sdl.Core.PluginFramework">
       <Version>2.1.0</Version>
