--- a/Antidote Verifier/Sdl.Community.AntidoteVerifier/Sdl.Community.AntidoteVerifier/Sdl.Community.AntidoteVerifier.csproj
+++ b/Antidote Verifier/Sdl.Community.AntidoteVerifier/Sdl.Community.AntidoteVerifier/Sdl.Community.AntidoteVerifier.csproj
@@ -120,6 +120,8 @@
     <Compile Include="TellMe\AppStoreDownloadAction.cs" />
     <Compile Include="TellMe\AppStoreForumAction.cs" />
     <Compile Include="TellMe\CommunityWikiAction.cs" />
+    <Compile Include="TellMe\DocumentationAction.cs" />
+    <Compile Include="TellMe\SourceCodeAction.cs" />
     <Compile Include="TellMe\TellMeProvider.cs" />
     <Compile Include="Utils\CustomTextCollectionVisitor.cs" />
     <Compile Include="Utils\DocumentIdGenerator.cs" />
