--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,15 @@ TMX_TranslationProvider/TMX_TranslationProviderWithUITest.sln
 /MemoQ/_bin/ru/memoQPlugin.resources.dll
 /MemoQ/_bin/TMProvider.dll
 /MemoQ/_bin/zh-Hans/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/de/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/es/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/fr/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/hu/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/ja/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/memoQPlugin.dll
+/memoQ TM Provider/_bin/memoQPlugin.sdlplugin
+/memoQ TM Provider/_bin/pl/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/pt/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/ru/memoQPlugin.resources.dll
+/memoQ TM Provider/_bin/TMProvider.dll
+/memoQ TM Provider/_bin/zh-Hans/memoQPlugin.resources.dll
