--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -76,7 +76,7 @@
 		  <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Core.Settings">
-		  <HintPath>..\..\..\Program Files (x86)\Trados\Trados Studio\Studio17\Sdl.Core.Settings.dll</HintPath>
+		  <HintPath>$(TradosFolder)\Sdl.Core.Settings.dll</HintPath>
 		</Reference>
 		<Reference Include="Sdl.Desktop.IntegrationApi">
 		  <HintPath>$(TradosFolder)\Sdl.Desktop.IntegrationApi.dll</HintPath>
