--- a/Jobs/Sdl.Community.Jobs/Properties/launchSettings.json
+++ b/Jobs/Sdl.Community.Jobs/Properties/launchSettings.json
@@ -3,6 +3,10 @@
     "Profile 1": {
       "commandName": "Executable",
       "executablePath": "C:\\Program Files (x86)\\Trados\\Trados Studio\\Studio17\\SDLTradosStudio.exe"
+    },
+    "Omega": {
+      "commandName": "Executable",
+      "executablePath": "C:\\Program Files (x86)\\Trados\\Trados Studio\\Studio18Beta\\SDLTradosStudio.exe"
     }
   }
 }
