QA found bugs, fixed

--- a/InterpretBank/InterpretBank/InterpretBank.csproj
+++ b/InterpretBank/InterpretBank/InterpretBank.csproj
@@ -90,6 +90,9 @@
     <Reference Include="Sdl.ProjectAutomation.Settings">
       <HintPath>$(TradosFolder)\Sdl.ProjectAutomation.Settings.dll</HintPath>
     </Reference>
+    <Reference Include="Sdl.TellMe.ProviderApi">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Trados\Trados Studio\Studio17\Sdl.TellMe.ProviderApi.dll</HintPath>
+    </Reference>
     <Reference Include="Sdl.Terminology.TerminologyProvider.Core">
       <HintPath>$(TradosFolder)\Sdl.Terminology.TerminologyProvider.Core.dll</HintPath>
     </Reference>
