LWProvider: change LangVersion to preview

--- a/LanguageWeaverProvider/LanguageWeaverProvider.csproj
+++ b/LanguageWeaverProvider/LanguageWeaverProvider.csproj
@@ -3,7 +3,7 @@
 
 	<PropertyGroup>
 		<UseWPF>true</UseWPF>
-		<LangVersion>latest</LangVersion>
+		<LangVersion>preview</LangVersion>
 		<TargetFramework>net48</TargetFramework>
 	</PropertyGroup>
 
