--- a/HunspellDictionaryManager/HunspellDictionaryManager/Sdl.Community.HunspellDictionaryManager.csproj
+++ b/HunspellDictionaryManager/HunspellDictionaryManager/Sdl.Community.HunspellDictionaryManager.csproj
@@ -48,7 +48,7 @@
     <Reference Include="Sdl.Core.Globalization">
       <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.Core.Globalization.dll</HintPath>
     </Reference>
-    <Reference Include="Sdl.Core.Globalization.Async, Version=1.8.0.0, Culture=neutral, PublicKeyToken=c28cdb26c445c888, processorArchitecture=MSIL">
+    <Reference Include="Sdl.Core.Globalization.Async">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio18\Sdl.Core.Globalization.Async.dll</HintPath>
     </Reference>
