--- a/ProjectTerms/Sdl.Community.ProjectTerms.Plugin/Sdl.Community.ProjectTerms.Plugin.csproj
+++ b/ProjectTerms/Sdl.Community.ProjectTerms.Plugin/Sdl.Community.ProjectTerms.Plugin.csproj
@@ -73,6 +73,9 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Reactive">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Trados\Trados Studio\Studio18Beta\System.Reactive.dll</HintPath>
+    </Reference>
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -92,6 +95,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>..\..\SdlCommunity.snk</AssemblyOriginatorKeyFile>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\..\SdlCommunity.snk">
