--- a/StudioViews/StudioViews/StudioViews.csproj
+++ b/StudioViews/StudioViews/StudioViews.csproj
@@ -182,9 +182,8 @@
     <Compile Include="Services\SdlxliffExporter.cs" />
     <Compile Include="Services\SegmentVisitor.cs" />
     <Compile Include="Services\WordCountProvider.cs" />
-    <Compile Include="TellMe\CommunityAppStoreAction.cs" />
     <Compile Include="TellMe\CommunityAppStoreForumAction.cs" />
-    <Compile Include="TellMe\CommunityWikiAction.cs" />
+    <Compile Include="TellMe\DocumentationAction.cs" />
     <Compile Include="TellMe\SourceCodeAction.cs" />
     <Compile Include="TellMe\TellMeProvider.cs" />
     <Compile Include="Themes\Generic\CustomProgressRing.cs" />
